--- a/agrof-1/src/pages/UserPage.css
+++ b/agrof-1/src/pages/UserPage.css
@@ -189,7 +189,7 @@ cursor: pointer; */
 
 .editUserContainer {
   background-color: #fff;
-  padding: 20px;
+  padding:20px;
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
   position: relative;
@@ -283,7 +283,7 @@ cursor: pointer; */
 .descriptionType {
   height: 80px;
   min-height: 30px;
-  max-height: 100px;
+  max-height: 46px;
   margin-bottom: 10px;
   background-color: #c3c3c3;
   border-style: none;
@@ -295,7 +295,6 @@ cursor: pointer; */
   padding: 5px;
   resize: vertical;
   overflow-y: auto;
-  
 }
 
 .charLimiter{
@@ -339,4 +338,15 @@ cursor: pointer; */
   box-shadow: 1px 1px 6px 0px #5f3713d0;
   margin-top: 100px;
   margin-left: 150px;
+}
+.selectCategory{
+  background-color: #c3c3c3;
+  border-style: none;
+  border-radius: 5px;
+  margin-bottom: 5px;
+  height: 30px;
+  box-shadow: 1px 1px 6px 0px rgba(143, 143, 143, 0.418);
+  font-weight: bold;
+  color: rgb(118, 118, 118);
+  padding-left: 2px;
 }
