--- a/agrof-1/src/pages/SearchResults.css
+++ b/agrof-1/src/pages/SearchResults.css
@@ -1,101 +1,121 @@
-.SearchResults{
-    background-color: #e3dfd6;
-    min-height: 100vh;
-  }
+.SearchResults {
+  background-color: #e3dfd6;
+  min-height: 100vh;
+}
 
 
-  .page-info-text{
-    display: flex;
-    background-color: orange;
-    justify-content: center;
-    align-items: center;
-    font-weight: bold;
-    text-shadow: 2px 1px 3px rgba(74, 74, 74, 0.5);
-    color: rgb(0, 0, 0);
-    margin-left: 70px;
-    margin-right: 70px;
-    border-radius: 5px;
-    height: 38px;
-    box-shadow: 1px 1px 6px 0px rgba(136, 85, 1, 0.418);
-  }
+.page-info-text {
+  display: flex;
+  background-color: orange;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  text-shadow: 2px 1px 3px rgba(74, 74, 74, 0.5);
+  color: rgb(0, 0, 0);
+  margin-left: 70px;
+  margin-right: 70px;
+  border-radius: 5px;
+  height: 38px;
+  box-shadow: 1px 1px 6px 0px rgba(136, 85, 1, 0.418);
+}
 
-  .four-per-row-list {
-    display: flex;
-    justify-content: center;
-    margin-top:20px;
-    flex-wrap: wrap; /* Ustawienie flex-wrap na wrap, aby elementy przemieszczały się do nowego wiersza, gdy brakuje miejsca */
-    list-style-type: none;
-    padding: 0;
-  }
+.four-per-row-list {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+  flex-wrap: wrap;
+  /* Ustawienie flex-wrap na wrap, aby elementy przemieszczały się do nowego wiersza, gdy brakuje miejsca */
+  list-style-type: none;
+  padding: 0;
+}
 
-  .strip{
-    display: flex;
-    margin-left: 100px;
-    margin-top: 10px;
-    gap: 15px;
-    
-  }
+.strip {
+  display: flex;
+  margin-left: 100px;
+  margin-top: 10px;
+  gap: 15px;
 
- /* Dropdown Button */
-.dropbtn{
-    align-items: center;
-    display: flex;
-    flex-direction: row;
-    background-color: rgb(179, 179, 179);
-    color: rgb(30,30,30);
-    font-weight: bold;
-    width: 200px;
-    height: 35px;
-    font-size: 16px;
-    border: none;
-    border-radius: 5px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    text-align: left;
-    padding-left: 5px;
-    
-    
-  }
+}
 
-  .arrow{
-    width: 20px;
-    height: 20px;
-    margin-left: auto;
-    padding-right: 5px;
-  }
-  
-  /* The container <div> - needed to position the dropdown content */
-  .dropdown {
-    position: relative;
-    display: inline-block;
-    
-    
-  }
-  
-  /* Dropdown Content (Hidden by Default) */
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 100%;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-    border-radius: 5px;
-   
-  }
-  
-  /* Links inside the dropdown */
-  .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-  }
-  
-  /* Change color of dropdown links on hover */
-  .dropdown-content a:hover {background-color: #ddd;}
-  
-  /* Show the dropdown menu on hover */
-  .dropdown:hover .dropdown-content {display: block;}
-  
-  /* Change the background color of the dropdown button when the dropdown content is shown */
-  .dropdown:hover .dropbtn {background-color: rgb(118, 118, 118)}
+/* Dropdown Button */
+.dropbtn {
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+  background-color: rgb(179, 179, 179);
+  color: rgb(30, 30, 30);
+  font-weight: bold;
+  width: 200px;
+  height: 35px;
+  font-size: 16px;
+  border: none;
+  border-radius: 5px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  text-align: left;
+  padding-left: 5px;
+
+
+}
+
+.arrow {
+  width: 20px;
+  height: 20px;
+  margin-left: auto;
+  padding-right: 5px;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+
+
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 100%;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  border-radius: 5px;
+
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: flex;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {
+  background-color: rgb(118, 118, 118)
+}
+
+.dropdown-button {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: flex;
+  cursor: pointer;
+
+}
+
+.dropdown-button:hover {
+  background-color: #ddd;
+}
