--- a/agrof-1/src/pages/UserPage.css
+++ b/agrof-1/src/pages/UserPage.css
@@ -129,7 +129,7 @@ body {
   margin-top: 15px;
   height: 30px;
   min-width: 80px;
-  margin-right: 30px;
+  margin-right: 20px;
   background-color: #5F3713;
   border-radius: 5px;
   border-color: #5F3713;
@@ -171,6 +171,22 @@ cursor: pointer; */
 }
 
 .discardButton {
+  margin-top: 15px;
+  height: 30px;
+  min-width: 80px;
+  margin-right: 10px;
+  background-color: #5F3713;
+  border-radius: 5px;
+  border-color: #5F3713;
+  text-align: center;
+  text-shadow: 1px 1px 3px rgba(250, 235, 215, 0.267);
+  font-weight: bold;
+  color: antiquewhite;
+  box-shadow:1px 1px 6px 0px #5f3713d0;
+  cursor: pointer;
+}
+
+.deleteButton{
   margin-top: 15px;
   height: 30px;
   min-width: 80px;
